[gd_scene load_steps=2 format=3 uid="uid://cqn4xqb6sro32"]

[ext_resource type="Script" uid="uid://brg2p5cti5qm4" path="res://scenes/player_info/player_info.gd" id="1_43kph"]

[node name="PlayerInfo" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_43kph")
metadata/_tab_index = 0

[node name="PlayerInfoLayout" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PlayerInfoLayout"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="PlayerSelectorList" type="VBoxContainer" parent="PlayerInfoLayout/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="PlayerDetailContainer" type="VBoxContainer" parent="PlayerInfoLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AccessComputerButton" type="Button" parent="PlayerInfoLayout/PlayerDetailContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Access Computer"

[node name="GeoLocationContainer" type="HBoxContainer" parent="PlayerInfoLayout/PlayerDetailContainer"]
layout_mode = 2

[node name="LongitudeLabel" type="Label" parent="PlayerInfoLayout/PlayerDetailContainer/GeoLocationContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Longitude:"
horizontal_alignment = 2
justification_flags = 162

[node name="LongitudeLineEdit" type="LineEdit" parent="PlayerInfoLayout/PlayerDetailContainer/GeoLocationContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LatitudeLabel" type="Label" parent="PlayerInfoLayout/PlayerDetailContainer/GeoLocationContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Latitude:"
horizontal_alignment = 2

[node name="LatitudeLineEdit" type="LineEdit" parent="PlayerInfoLayout/PlayerDetailContainer/GeoLocationContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LastSeenContainer" type="HBoxContainer" parent="PlayerInfoLayout/PlayerDetailContainer"]
layout_mode = 2

[node name="LastSeenLabel" type="Label" parent="PlayerInfoLayout/PlayerDetailContainer/LastSeenContainer"]
layout_mode = 2
text = "Last seen:"

[node name="LastSeenLineEdit" type="LineEdit" parent="PlayerInfoLayout/PlayerDetailContainer/LastSeenContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
